# boardify

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  pyproject.toml  requirements.txt  ruff.toml
.github/workflows/: ci.yml  lint.yml
migrations/: env.py  script.py.mako
migrations/versions/: 21b576db811c_insert_constants.py  97b8ccf10bd6_create_tables.py
src/: config.py  database.py  main.py  security.py
src/api/: dependencies.py
src/api/routes/: __init__.py  auth.py  board.py  priority.py  status.py  task.py  user.py
src/models/: __init__.py  board.py  priority.py  status.py  task.py  user.py
src/repositories/: __init__.py  base.py  board.py  priority.py  status.py  task.py  user.py
src/schemas/: __init__.py  auth.py  board.py  priority.py  task.py  user.py
tests/: conftest.py  data.py  test_board.py  test_priority.py  test_task.py  test_user.py  utils.py
tests/tests/: test_auth.py  test_status.py
