[project]
name = "boardify"
version = "0.1.0"
description = "Simple FastAPI application for managing boards and tasks"
authors = [
    {name = "Nazarii Kuntsevych", email = "kuntsevych.n.v@gmail.com"}
]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "aiomysql==0.2.0",
    "cryptography==45.0.6",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.11",
    "passlib==1.7.4",
    "pydantic[email]==2.11.9",
    "pydantic-settings==2.10.1",
    "PyJWT==2.10.1",
    "SQLAlchemy==2.0.43",
]
