[project]
name = "boardify"
version = "0.1.0"
description = "Simple FastAPI application for managing boards and tasks"
authors = [
    {name = "Nazarii Kuntsevych", email = "kuntsevych.n.v@gmail.com"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.13"
dependencies = [
    "aiomysql==0.2.0",
    "alembic==1.16.5",
    "cryptography==45.0.6",
    "fastapi==0.116.1",
    "fastapi-cli==0.0.11",
    "passlib==1.7.4",
    "pydantic[email]==2.11.9",
    "pydantic-settings==2.10.1",
    "PyJWT==2.10.1",
    "SQLAlchemy==2.0.43",
]

[project.optional-dependencies]
dev = [
    "greenlet==3.2.4",
    "httpx==0.28.1",
    "pytest==8.4.2",
    "pytest-asyncio==1.2.0",
    "ruff==0.13.0",
]

[tool.alembic]
script_location = "%(here)s/migrations"
prepend_sys_path = [
    ".",
]

[[tool.alembic.post_write_hooks]]
name = "ruff_fix"
type = "module"
module = "ruff"
options = "check --fix --unsafe-fixes REVISION_SCRIPT_FILENAME"

[[tool.alembic.post_write_hooks]]
name = "ruff_format"
type = "module"
module = "ruff"
options = "format REVISION_SCRIPT_FILENAME"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",       # code style
    "F",       # code errors
    "W",       # warnings
    "I",       # sorting
    "N",       # naming
    "ANN",     # annotations
    "Q",       # quotes
]
ignore = [
    "ANN002",  # annotations for *args
    "ANN003",  # annotations for **kwargs
    "ANN204",  # return annotations for magic methods
]

[tool.pytest.ini_options]
addopts = "--verbose"
